feat: enhance UI with luxury scrollbars, footer links and remove docs emojis

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,9 @@
     />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="background-color: #0B0A09; min-height: 100vh; color: #D4AF37; display: flex; align-items: center; justify-content: center; font-family: sans-serif;">
+      <h1>INITIALIZING ANCILE PROTOCOL...</h1>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
