--- a/frontend_vanilla/index.html
+++ b/frontend_vanilla/index.html
@@ -98,8 +98,8 @@
                 </div>
                 
                 <div class="input-group">
-                    <label>Relation to Host</label>
-                    <select id="relation-host">
+                    <label for="relation-host">Relation to Host</label>
+                    <select id="relation-host" title="Relation to Host">
                         <option value="Friend">Friend</option>
                         <option value="Family">Family</option>
                     </select>
